--- a/src/app/componentes/administrador/perfil/perfil.component.scss
+++ b/src/app/componentes/administrador/perfil/perfil.component.scss
@@ -55,7 +55,7 @@
   display: grid;
   grid-column-gap: 0.75rem;
   grid-template-columns: repeat(2, minmax(0, 1fr));
-  grid-row-gap: 0;
+  grid-row-gap: 0.75rem;
 
 }
 
@@ -86,6 +86,6 @@ button {
   }
 }
 
-#color {
+.color {
   background-color: #856abb !important;
 }
