--- a/src/app/componentes/participante/menu/menu.component.html
+++ b/src/app/componentes/participante/menu/menu.component.html
@@ -26,7 +26,7 @@
 <mat-sidenav-container style="height: calc(100vh - 64px);" class="full-height-container">
   <mat-sidenav #sidenav mode="over" class="sidebar">
     <nav style="padding: 16px;">
-      <p><a routerLink="/participante/perfil" routerLinkActive="active-link" (click)="sidenav.close()">Editar Perfil</a></p>
+      <p><a [routerLink]="['/participante/perfil', participanteDatos.id]" routerLinkActive="active-link" (click)="sidenav.close()">Editar Perfil</a></p>
       <p><a routerLink="/participante/inicio" routerLinkActive="active-link" (click)="sidenav.close()">Mis Fotografías</a></p>
       <p><a routerLink="/participante/addFotografia" routerLinkActive="active-link" (click)="sidenav.close()">Añadir Fotografía</a></p>
       <p><a (click)="logout()">Salir</a></p>
